# tnqeet-app

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  railway.toml
backend/: pyproject.toml
backend/app/: api.py  config.py  dotters.py  main.py  schemas.py
backend/scripts/: download_weights.py
backend/tests/: test_api.py  test_dotters.py
docs/superpowers/plans/: 2026-06-25-tnqeet-demo-app.md
docs/superpowers/specs/: 2026-06-25-tnqeet-demo-app-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: logic.test.ts
frontend/src/components/: Collapse.tsx  CompareAll.tsx  DiffText.tsx  ErrorBox.tsx  Examples.tsx  Header.tsx  LangToggle.tsx  LlmPanel.tsx  MethodTabs.tsx  ResultPanel.tsx  TextBox.tsx  ThemeToggle.tsx  WarningBox.tsx  icons.tsx
frontend/src/data/: examples.ts
frontend/src/hooks/: useDismiss.ts  useTheme.ts
frontend/src/i18n/: ar.ts  detect.ts  en.ts  index.ts
frontend/src/lib/: api.ts  arabic.ts  diff.ts  openrouter.ts  storage.ts  ui.ts
